# teeunit

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  Dockerfile.hfspace  LICENSE  README.md  openenv.yaml  play_agent.py  play_llm_agent.py  pyproject.toml
docs/: openenv.md
northflank/: README.md  server-service.json  training-job-h100.json  training-job.json
notebooks/: teeunit_training.ipynb
scripts/: train-local.sh
teeunit/: __init__.py  client.py  models.py  openenv_client.py  openenv_environment.py  openenv_models.py  train.py
teeunit/protocol/: __init__.py  chunk.py  client.py  const.py  huffman.py  objects.py  packer.py  packet.py  snapshot.py
teeunit/server/: __init__.py  agent_state.py  app.py  arena.py  bot_manager.py  entrypoint.sh  line_of_sight.py  requirements.txt  supervisord.conf  tee_environment.py  teeworlds.cfg  weapons.py
teeunit/tests/: __init__.py  test_arena.py  test_client.py  test_environment.py  test_models.py  test_protocol.py
teeunit_env/: __init__.py  client.py  openenv.yaml  pyproject.toml
teeunit_env/server/: Dockerfile  __init__.py  app.py  tee_environment.py
tests/: __init__.py  test_openenv_models.py
